tests/baselines/reference/typeUsedAsValueError.errors.txt
tests/cases/compiler/typeUsedAsValueError.ts(16,11): error TS2692: Cannot find name 'Interface'. A type exists with this name, but no value.
tests/cases/compiler/typeUsedAsValueError.ts(17,11): error TS2304: Cannot find name 'InterfaceNotFound'.
tests/cases/compiler/typeUsedAsValueError.ts(18,13): error TS2692: Cannot find name 'TypeAliasForSomeClass'. A type exists with this name, but no value.
tests/cases/compiler/typeUsedAsValueError.ts(19,16): error TS2692: Cannot find name 'TypeAliasForSomeClass'. A type exists with this name, but no value.
tests/cases/compiler/typeUsedAsValueError.ts(20,16): error TS2304: Cannot find name 'TypeAliasForSomeClassNotFound'.
tests/cases/compiler/typeUsedAsValueError.ts(21,11): error TS2692: Cannot find name 'someType'. A type exists with this name, but no value.
tests/cases/compiler/typeUsedAsValueError.ts(22,17): error TS2692: Cannot find name 'someType'. A type exists with this name, but no value.
tests/cases/compiler/typeUsedAsValueError.ts(23,17): error TS2304: Cannot find name 'someTypeNotFound'.


==== tests/cases/compiler/typeUsedAsValueError.ts (8 errors) ====
    interface Interface {
    
    }
    
    class SomeClass {
    
    }
    
    type TypeAliasForSomeClass = SomeClass;
    type someType = { x: number };
    
    function acceptsSomeType(a: someType) {
    
    }
    
    let one = Interface;
              ~~~~~~~~~
!!! error TS2692: Cannot find name 'Interface'. A type exists with this name, but no value.
    let two = InterfaceNotFound;
              ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'InterfaceNotFound'.
    let three = TypeAliasForSomeClass;
                ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2692: Cannot find name 'TypeAliasForSomeClass'. A type exists with this name, but no value.
    let four = new TypeAliasForSomeClass();
                   ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2692: Cannot find name 'TypeAliasForSomeClass'. A type exists with this name, but no value.
    let five = new TypeAliasForSomeClassNotFound();
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeAliasForSomeClassNotFound'.
    let six = someType;
              ~~~~~~~~
!!! error TS2692: Cannot find name 'someType'. A type exists with this name, but no value.
    acceptsSomeType(someType);
                    ~~~~~~~~
!!! error TS2692: Cannot find name 'someType'. A type exists with this name, but no value.
    acceptsSomeType(someTypeNotFound);
                    ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'someTypeNotFound'.